Add leaderboard api. Fixed nginx.conf

--- a/leaderboard/public/nginx.conf
+++ b/leaderboard/public/nginx.conf
@@ -42,18 +42,17 @@ http {
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
-//        location /api/ {
-//            rewrite    /api/([^/]+) /$1 break;
-//            proxy_pass http://leaderboard-server:8080;
-//            proxy_http_version 1.1;
-//            proxy_set_header Upgrade $http_upgrade;
-//            proxy_set_header Connection 'upgrade';
-//            proxy_set_header Host $host;
-//            proxy_cache_bypass $http_upgrade;
-//        }
+        location /api/ {
+            proxy_pass http://leaderboard-aggregator:8080/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
 
         location / {
-            try_files $uri $uri/ /index.html;
+          try_files $uri $uri/ /index.html;
         }
 
         error_page 404 /404.html;
