--- a/dashboard/public/nginx.conf
+++ b/dashboard/public/nginx.conf
@@ -42,15 +42,14 @@ http {
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
-//        location /api/ {
-//            rewrite    /api/([^/]+) /$1 break;
-//            proxy_pass http://dashboard-server:8080;
-//            proxy_http_version 1.1;
-//            proxy_set_header Upgrade $http_upgrade;
-//            proxy_set_header Connection 'upgrade';
-//            proxy_set_header Host $host;
-//            proxy_cache_bypass $http_upgrade;
-//        }
+#        location /api/ {
+#            proxy_pass http://dashboard-server:8080;
+#            proxy_http_version 1.1;
+#            proxy_set_header Upgrade $http_upgrade;
+#            proxy_set_header Connection 'upgrade';
+#            proxy_set_header Host $host;
+#            proxy_cache_bypass $http_upgrade;
+#        }
 
         location / {
             try_files $uri $uri/ /index.html;
