--- a/leaderboard/public/nginx.conf
+++ b/leaderboard/public/nginx.conf
@@ -43,7 +43,7 @@ http {
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
         location /api/ {
-            proxy_pass http://leaderboard-aggregator:8080/api/;
+            proxy_pass http://leaderboard-api:8080/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
