--- a/leaderboard/export_presets.cfg
+++ b/leaderboard/export_presets.cfg
@@ -20,3 +20,26 @@ html/custom_html_shell=""
 html/head_include=""
 custom_template/release="/home/ldary/Templates/webassembly_release.zip"
 custom_template/debug="/home/ldary/Templates/webassembly_debug.zip"
+
+[preset.1]
+
+name="HTML5-Prod"
+platform="HTML5"
+runnable=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="public/index.html"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release="/home/ldary/Templates/webassembly_release.zip"
+custom_template/debug="/home/ldary/Templates/webassembly_debug.zip"
