--- a/leaderboard/export_presets.cfg
+++ b/leaderboard/export_presets.cfg
@@ -28,7 +28,8 @@ name="HTML5-Prod"
 platform="HTML5"
 runnable=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PoolStringArray( "res://LeaderBoard.tscn", "res://avatars/Avatar.tscn" )
 include_filter=""
 exclude_filter=""
 export_path="public/index.html"
