Latest leaderboard and dashboard

--- a/dashboard/export_presets.cfg
+++ b/dashboard/export_presets.cfg
@@ -27,10 +27,11 @@ name="Linux/X11"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PoolStringArray( "res://Bank/Bank.tscn", "res://Bank/Data.tscn", "res://Bank/DataLink.tscn", "res://BankDashboard.tscn", "res://Globe.tscn" )
 include_filter=""
 exclude_filter=""
-export_path="../../dashboard_linux.zip.x86_64"
+export_path="../../dashboard_linux.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
