--- a/leaderboard/export_presets.cfg
+++ b/leaderboard/export_presets.cfg
@@ -52,10 +52,11 @@ name="Linux/X11"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PoolStringArray( "res://LeaderBoard.tscn", "res://avatars/Avatar.tscn" )
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../leaderboard.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -69,5 +70,5 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug=""
+custom_template/release="/home/ldary/Templates/linux_x11_64_release"
+custom_template/debug="/home/ldary/Templates/linux_x11_64_debug"
