--- a/leaderboard/export_presets.cfg
+++ b/leaderboard/export_presets.cfg
@@ -56,7 +56,7 @@ export_filter="scenes"
 export_files=PoolStringArray( "res://LeaderBoard.tscn", "res://avatars/Avatar.tscn" )
 include_filter=""
 exclude_filter=""
-export_path="../../leaderboard.x86_64"
+export_path="../../summit_leaderboard"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -69,6 +69,6 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
-custom_template/release="/home/ldary/Templates/linux_x11_64_release"
-custom_template/debug="/home/ldary/Templates/linux_x11_64_debug"
+binary_format/embed_pck=true
+custom_template/release="/home/ldary/summit/godot_templates/linux_x11_64_release"
+custom_template/debug="/home/ldary/summit/godot_templates/linux_x11_64_debug"
