--- a/leaderboard/export_presets.cfg
+++ b/leaderboard/export_presets.cfg
@@ -4,8 +4,7 @@ name="HTML5"
 platform="HTML5"
 runnable=true
 custom_features=""
-export_filter="scenes"
-export_files=PoolStringArray( "res://LeaderBoard.tscn", "res://avatars/Avatar.tscn" )
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../gh_pages/leaderboard.html"
@@ -28,8 +27,7 @@ name="HTML5-Prod"
 platform="HTML5"
 runnable=false
 custom_features=""
-export_filter="scenes"
-export_files=PoolStringArray( "res://LeaderBoard.tscn", "res://avatars/Avatar.tscn" )
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="public/index.html"
@@ -52,8 +50,7 @@ name="Linux/X11"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="scenes"
-export_files=PoolStringArray( "res://LeaderBoard.tscn", "res://avatars/Avatar.tscn", "res://src/avatar/Avatar.tscn", "res://src/leaderboard/LeaderBoard.tscn", "res://src/lobby/Lobby.tscn", "res://src/main/Game.tscn", "res://src/paused/Paused.tscn", "res://src/stopped/Stopped.tscn" )
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../summit_leaderboard"
