Fix URL to admin socket.

--- a/leaderboard/public/nginx.conf
+++ b/leaderboard/public/nginx.conf
@@ -42,6 +42,15 @@ http {
         # Load configuration files for the default server block.
         include      /opt/app-root/etc/nginx.default.d/*.conf;
 
+        location /socket {
+            proxy_pass http://admin-server.admin-hq.svc.cluster.local:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         location /api/ {
             proxy_pass http://leaderboard-api:8080/api/;
             proxy_http_version 1.1;
