--- a/leaderboard/export_presets.cfg
+++ b/leaderboard/export_presets.cfg
@@ -50,7 +50,8 @@ name="Linux/X11"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PoolStringArray( "res://src/avatar/Avatar.tscn", "res://src/leaderboard/LeaderBoard.tscn", "res://src/lobby/Lobby.tscn", "res://src/main/Game.tscn", "res://src/paused/Paused.tscn", "res://src/stopped/Stopped.tscn" )
 include_filter=""
 exclude_filter=""
 export_path="../../summit_leaderboard"
